新增数据权限md

--- a/数据权限.md
+++ b/数据权限.md
@@ -29,7 +29,7 @@ args = {MappedStatement.class, Object.class, RowBounds.class, ResultHandler.clas
 - args：对应哪一个方法的入参；
   method中对应四种的类型的方法：
 
-![image](/Users/zhangping/Documents/test/method中对应四种的类型的方法.png)
+![img](https://github.com/zhangping3211/cloudevent/raw/main/img/method4.png)
 
 示例：
 
