--- a/数据权限.md
+++ b/数据权限.md
@@ -1,7 +1,7 @@
 mybatis：自定义实现拦截器插件Interceptor
 
 首先熟悉一下Mybatis的执行过程：
-![image](/Users/zhangping/Documents/test/myibatis执行过程.png)
+![image](https://github.com/zhangping3211/cloudevent/blob/main/img/myibatis_process.png)
 
 先说明Mybatis中可以被拦截的类型具体有以下四种：
 1.Executor：拦截执行器的方法。
